<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main layout -->
    <FrameLayout
        android:id="@+id/main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!-- Body layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/topborder"
                android:padding="5dp">


                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton2"
                    android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/my_profile"
                    android:id="@+id/myprofile"
                    android:textColor="@color/white"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton3"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">


                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstNameEdit"
                    android:background="@drawable/rectangle_edittext2"
                    android:layout_alignParentRight="true"
                    android:hint="@string/first_name"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/first_name"
                    android:id="@+id/firstNameText"
                    android:padding="10dp"
                    android:layout_toLeftOf="@+id/firstNameEdit"
                    android:layout_toStartOf="@+id/firstNameEdit" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:layout_toLeftOf="@+id/firstNameText"
                    android:layout_toStartOf="@+id/firstNameText"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/star"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">


                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastNameEdit"
                    android:background="@drawable/rectangle_edittext2"
                    android:layout_alignParentRight="true"
                    android:hint="@string/last_name"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/last_name"
                    android:id="@+id/lastNameText"
                    android:padding="10dp"
                    android:layout_toLeftOf="@+id/lastNameEdit"
                    android:layout_toStartOf="@+id/lastNameEdit" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:layout_toLeftOf="@+id/lastNameText"
                    android:layout_toStartOf="@+id/lastNameText"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/star"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">


                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailEdit"
                    android:background="@drawable/rectangle_edittext2"
                    android:layout_alignParentRight="true"
                    android:hint="@string/e_mail"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/e_mail"
                    android:id="@+id/emailText"
                    android:padding="10dp"
                    android:layout_toLeftOf="@+id/emailEdit"
                    android:layout_toStartOf="@+id/emailEdit" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView5"
                    android:layout_toLeftOf="@+id/emailText"
                    android:layout_toStartOf="@+id/emailText"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/star"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">


                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/telephoneEdit"
                    android:background="@drawable/rectangle_edittext2"
                    android:layout_alignParentRight="true"
                    android:hint="@string/telephone"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/telephone"
                    android:id="@+id/telephoneText"
                    android:padding="10dp"
                    android:layout_toLeftOf="@+id/telephoneEdit"
                    android:layout_toStartOf="@+id/telephoneEdit" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView6"
                    android:layout_toLeftOf="@+id/telephoneText"
                    android:layout_toStartOf="@+id/telephoneText"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/star"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">


                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/faxEdit"
                    android:background="@drawable/rectangle_edittext2"
                    android:layout_alignParentRight="true"
                    android:hint="@string/fax"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/fax"
                    android:id="@+id/faxText"
                    android:padding="10dp"
                    android:layout_toLeftOf="@+id/faxEdit"
                    android:layout_toStartOf="@+id/faxEdit" />



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continueButton"
                    android:id="@+id/continueButton"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/button"
                    android:textColor="@color/white"
                    android:layout_alignParentEnd="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backButton"
                    android:id="@+id/backButton"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button"
                    android:textColor="@color/white"
                    android:layout_toLeftOf="@+id/continueButton" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </LinearLayout>



        </LinearLayout>

        <!-- header bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- Nav drawer -->




            <include layout="@layout/navbar" />
        </LinearLayout>
    </FrameLayout>

</android.support.v4.widget.DrawerLayout>