<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main layout -->
    <FrameLayout
        android:id="@+id/main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!-- Body layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/topborder"
            android:padding="10dp">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton2"
                android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/change_password"
                android:id="@+id/chnagepassword"
                android:textColor="@color/white"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton3"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">



                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password"
                    android:background="@drawable/rectangle_edittext2"
                    android:layout_alignParentRight="true"
                    android:hint="@string/password"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/password"
                    android:id="@+id/pwdText"
                    android:padding="10dp"
                    android:layout_toLeftOf="@+id/password"
                    android:layout_toStartOf="@+id/password" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:layout_toLeftOf="@+id/pwdText"
                    android:layout_toStartOf="@+id/pwdText"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/star"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">


                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/conformpwd"
                    android:background="@drawable/rectangle_edittext2"
                    android:layout_alignParentRight="true"
                    android:hint="@string/confirm"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/confirm"
                    android:id="@+id/confirmpwdText"
                    android:padding="10dp"
                    android:layout_toLeftOf="@+id/conformpwd"
                    android:layout_toStartOf="@+id/conformpwd" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:layout_toLeftOf="@+id/confirmpwdText"
                    android:layout_toStartOf="@+id/confirmpwdText"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/star"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continueButton"
                    android:id="@+id/continueButton"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/button"
                    android:textColor="@color/white"
                    android:layout_alignParentEnd="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backButton"
                    android:id="@+id/backButton"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button"
                    android:textColor="@color/white"
                    android:layout_toLeftOf="@+id/continueButton" />

            </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>



        </LinearLayout>

        <!-- header bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- Nav drawer -->




            <include layout="@layout/navbar" />
        </LinearLayout>
    </FrameLayout>

</android.support.v4.widget.DrawerLayout>